# ftp-ext

ftp-ext/: background.js  content.js  database.py  encryption.py  manifest.json  popup.css  popup.html  popup.js  pyproject.toml  replit.md  requirements.txt  server.py  sftp_client.py
ftp-ext/static/: index.html  script.js  style.css
